# CarDetection

./: .gitignore  CLAUDE.md  MODEL_CARD.md  README.md  app.py  dvc.yaml  environment.yml  mlflow.db  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: keep-alive.yml  ml_pipeline.yml
.streamlit/: config.toml
configs/: classifier_custom_cnn.yaml  classifier_efficientnet.yaml  classifier_resnet50.yaml  detection_fasterrcnn.yaml  stanford_cars.yaml
data/processed/: class_names.json
docker/: Dockerfile  docker-compose.yml
notebooks/: 01_eda.ipynb
pages/: 1_live_detection.py  2_upload_detect.py  3_analytics.py  4_about.py
reports/eda/: summary.json
reports/evaluation/: classification_report.txt
scripts/: generate_yolo_dataset.py  retrain_from_feedback.py  run_eda.py  run_pipeline.ps1  run_pipeline.sh  run_retrain_from_feedback.ps1  setup_data.py  train_yolo.py
src/: __init__.py
src/data/: __init__.py  augmentations.py  dataset.py  preprocess.py  pytorch_datasets.py  validate.py
src/evaluate/: __init__.py  detection_metrics.py  evaluate_classifier.py  metrics.py
src/mlops/: __init__.py  drift_monitor.py  export_onnx.py  promote_model.py
src/models/: __init__.py  classifier.py  cnn.py  faster_rcnn.py  yolo.py
src/serve/: __init__.py  feedback.py  inference.py  preprocessing.py  session.py  viz.py
src/train/: __init__.py  classifier_train.py  detection_train.py
tests/: test_dataset.py
